# tools-builder

./: .gitignore  README.md
autodev_factory/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
autodev_factory/agents/: __init__.py  base_agent.py  code_generator_agent.py  debug_agent.py  deployment_agent.py  documentation_agent.py  file_structure_agent.py  github_agent.py  idea_generator_agent.py  learning_agent.py  niche_finder_agent.py  optimization_agent.py  product_manager_agent.py  security_agent.py  system_architect_agent.py  testing_agent.py  trend_research_agent.py
autodev_factory/config/: __init__.py  settings.py
autodev_factory/core/: __init__.py  orchestrator.py  workflow_engine.py
autodev_factory/utils/: __init__.py  file_utils.py  git_utils.py
