[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodev-factory"
version = "0.1.0"
description = "Autonomous AI Developer Agent - Build complete software tools automatically"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AutoDev Factory Team", email = "team@autodev.factory"}
]
keywords = [
    "ai",
    "automation",
    "code-generation",
    "autonomous-agents",
    "software-development",
    "devops"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "crewai>=0.30.0",
    "openai>=1.10.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "PyGithub>=2.1.0",
    "gitpython>=3.1.40",
    "sqlalchemy>=2.0.25",
    "redis>=5.0.1",
    "chromadb>=0.4.22",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "click>=8.1.7",
    "rich>=13.7.0",
    "tqdm>=4.66.1",
    "aiohttp>=3.9.1",
    "loguru>=0.7.2",
    "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
]
docker = [
    "docker>=7.0.0",
]
aws = [
    "boto3>=1.34.34",
]

[project.scripts]
autodev = "main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/autodev-factory"
Documentation = "https://github.com/yourusername/autodev-factory#readme"
Repository = "https://github.com/yourusername/autodev-factory.git"
Issues = "https://github.com/yourusername/autodev-factory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autodev_factory*", "agents*", "config*", "core*", "utils*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
